--- a/result/2021-12-24.md
+++ b/result/2021-12-24.md
@@ -58,5 +58,6 @@
 58. [西安封闭管理第一天](https://s.weibo.com//weibo?q=%E8%A5%BF%E5%AE%89%E5%B0%81%E9%97%AD%E7%AE%A1%E7%90%86%E7%AC%AC%E4%B8%80%E5%A4%A9&Refer=top) 54340
 59. [圣诞可可抹茶蛋糕](https://s.weibo.com//weibo?q=%23%E5%9C%A3%E8%AF%9E%E5%8F%AF%E5%8F%AF%E6%8A%B9%E8%8C%B6%E8%9B%8B%E7%B3%95%23&Refer=top) 24639
 60. [为肉夹馍加油](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E8%82%89%E5%A4%B9%E9%A6%8D%E5%8A%A0%E6%B2%B9%23&Refer=top) 17363
-61. [高校齐唱夜空中最亮的星祝福考研生](https://s.weibo.com//weibo?q=%23%E9%AB%98%E6%A0%A1%E9%BD%90%E5%94%B1%E5%A4%9C%E7%A9%BA%E4%B8%AD%E6%9C%80%E4%BA%AE%E7%9A%84%E6%98%9F%E7%A5%9D%E7%A6%8F%E8%80%83%E7%A0%94%E7%94%9F%23&Refer=top) 15638
-62. [派对C位出片法](https://s.weibo.com//weibo?q=%23%E6%B4%BE%E5%AF%B9C%E4%BD%8D%E5%87%BA%E7%89%87%E6%B3%95%23&Refer=top) 15222
+61. [高校齐唱夜空中最亮的星祝福考研生](https://s.weibo.com//weibo?q=%23%E9%AB%98%E6%A0%A1%E9%BD%90%E5%94%B1%E5%A4%9C%E7%A9%BA%E4%B8%AD%E6%9C%80%E4%BA%AE%E7%9A%84%E6%98%9F%E7%A5%9D%E7%A6%8F%E8%80%83%E7%A0%94%E7%94%9F%23&Refer=top) 16865
+62. [派对C位出片法](https://s.weibo.com//weibo?q=%23%E6%B4%BE%E5%AF%B9C%E4%BD%8D%E5%87%BA%E7%89%87%E6%B3%95%23&Refer=top) 15741
+63. [9旬老人走失家中小狗一路陪伴](https://s.weibo.com//weibo?q=%239%E6%97%AC%E8%80%81%E4%BA%BA%E8%B5%B0%E5%A4%B1%E5%AE%B6%E4%B8%AD%E5%B0%8F%E7%8B%97%E4%B8%80%E8%B7%AF%E9%99%AA%E4%BC%B4%23&Refer=top) 15203
